Updatinf services text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="card-info">
                 <h3 class="card-title">Software Development</h3>
-                <p>I build Awesome Software</p>
+                <p>Develop Awesome Software</p>
             </div>
             </div>
             <div class="cards">
@@ -55,7 +55,7 @@
                 </div>
                 <div class="card-info">
                 <h3 class="card-title">UI/UX</h3>
-                <p>I make better designs than Ahmed Bakr</p>
+                <p>Innovative and User Centered Desigsns</p>
             </div>
             </div>
             <div class="cards">
@@ -64,7 +64,7 @@
                 </div>
                 <div class="card-info">
                 <h3 class="card-title">Mobile App Development</h3>
-                <p>I build mobile applications for money</p>
+                <p>Building Mobile Apps for Bussinesses</p>
             </div>
             </div>
             
